RESOLVED FIXED216571
REGRESSION (r267053): ASSERTION FAILED: videoFullscreenManager->client() == &_videoFullscreenManagerProxyClient in [WKFullScreenWindowController _completedExitFullScreen]
https://bugs.webkit.org/show_bug.cgi?id=216571
Summary REGRESSION (r267053): ASSERTION FAILED: videoFullscreenManager->client() == &...
Ryan Haddad
Reported 2020-09-15 11:15:36 PDT
TestWebKitAPI.WKWebViewCloseAllMediaPresentations.ElementFullscreen is consistently failing an assertion on iOS Simulator: TestWebKitAPI.WKWebViewCloseAllMediaPresentations.ElementFullscreen 2020-09-15 10:13:33.563 TestWebKitAPI[49315:204447194] <CATransformLayer: 0x7f9cedc62080> - changing property masksToBounds in transform-only layer, will have no effect ASSERTION FAILED: videoFullscreenManager->client() == &_videoFullscreenManagerProxyClient /Volumes/Data/slave/ios-simulator-13-debug/build/Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm(834) : -[WKFullScreenWindowController _completedExitFullScreen] 1 0x10de9ce69 WTFCrash 2 0x11b9ff9ab WTFCrashWithInfo(int, char const*, char const*, int) 3 0x11cb1413c -[WKFullScreenWindowController _completedExitFullScreen] 4 0x11cb155a5 -[WKFullScreenWindowController _exitFullscreenImmediately] 5 0x11cb14724 -[WKFullScreenWindowController close] 6 0x11c5f8d24 -[WKWebView(FullScreenAPI_Private) closeFullScreenWindowController] 7 0x11ca2b1fe WebKit::PageClientImpl::closeFullScreenManager() 8 0x11c80253d WebKit::WebFullScreenManagerProxy::close() 9 0x11c5032ea -[WKWebView(WKPrivate) _closeAllMediaPresentations] 10 0x10c7aa859 WKWebViewCloseAllMediaPresentations_ElementFullscreen_Test::TestBody() 11 0x10c840d04 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 12 0x10c81e04b void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 13 0x10c81df86 testing::Test::Run() 14 0x10c81edaa testing::TestInfo::Run() 15 0x10c81fc74 testing::TestCase::Run() 16 0x10c82aa88 testing::internal::UnitTestImpl::RunAllTests() 17 0x10c845134 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 18 0x10c82a59b bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 19 0x10c82a46d testing::UnitTest::Run() 20 0x10c672781 RUN_ALL_TESTS() 21 0x10c672712 TestWebKitAPI::TestsController::run(int, char**) 22 0x10c7f101b main 23 0x11953410d start Child process terminated with signal 11: Segmentation fault https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKWebViewCloseAllMediaPresentations.ElementFullscreen
Attachments
Patch (1.97 KB, patch)
2020-09-15 12:15 PDT, Peng Liu
no flags
Radar WebKit Bug Importer
Comment 1 2020-09-15 11:15:54 PDT
Peng Liu
Comment 2 2020-09-15 12:15:24 PDT
EWS
Comment 3 2020-09-15 16:21:07 PDT
Committed r267110: <https://trac.webkit.org/changeset/267110> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408844 [details].
Note You need to log in before you can comment on or make changes to this bug.