REGRESSION (r267053): ASSERTION FAILED: videoFullscreenManager->client() == &_videoFullscreenManagerProxyClient in [WKFullScreenWindowController _completedExitFullScreen] https://bugs.webkit.org/show_bug.cgi?id=216571

Reviewed by Jer Noble.

It is possible that an element exits fullscreen before it completely enters
fullscreen. In that case, the client of VideoFullscreenManagerProxy is nullptr.

No new tests, fixing an assertion failure when running
TestWebKitAPI.WKWebViewCloseAllMediaPresentations.ElementFullscreen.

* UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController _completedExitFullScreen]):


Canonical link: https://commits.webkit.org/229389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267110 268f45cc-cd09-0410-ab3c-d52691b4dbfc